@startuml

title 템플릿 메서드 패턴을 모터 예제에 적용한 경우

abstract class Motor {
    - motorStatus : MotorStatus
    + Motor(door : Door)
    + getMotorStatus() : MotorStatus
    - setMotorStatus(motorStatus : MotorStatus) : void
    + move(direction : Direction) : void
    # moveMotor(direction : Direction) : void
}

class HyundaiMotor {
    + HyundaiMotor(motor : Motor)
    - moveMotor(direction : Direction) : void
}

class LGMotor {
    + LGMotor(motor : Motor)
    - moveMotor(direction : Direction) : void
}

Motor <|-- HyundaiMotor
Motor <|-- LGMotor

@enduml